                     mean fitnesses which should approximate 
                     the expected fitness of a gene for 
                     a sufficiently high number of repeated evaluations.

- terminate.R contains:
        terminatedFalse()
        terminatedAbsoluteError()
        terminatedRelativeError()
        TerminationFactory()

        Rationale: Provides a set of standard termination conditions
                   to avoid their reimplementation in each problem 
                   environment which uses them.

- xegaEvalPopulation.R contains:
        xegaEvalPopulation()
        xegaRepEvalPopulation()
        xegaEvalPopulationFactory()
       
        Rationale: Provides an evaluation function for repeated 
                   evaluations of stochastic functions.
         
        xegaLogEvalsPopulation()  Reporting of sigma and obs added.
                                  For assessing stability of mean fitness
                                  of stochastic problems.

Version 1.0.0.5 (2024-10-01)

- terminatePAC()  Terminate if an epsilon-environment of an 
                   estimated upper PAC bound of the optimal solution 
                   is reached.

Version 1.0.0.6 (2025-01-21)

- Examples for futureLapplyHet, PparLapply, and PparLapplyHet fixed 
  by Henrik Bengtsson. 
  
Version 1.0.0.7 (2025-01-23)

- terminateGEQ()  Terminate if the (phenotype) value of a solution 
                  is greater or equal than a threshold.
- terminateLEQ()  Terminate if the (phenotype) value of a solution 
                  is less or equal than a threshold.

Version 1.0.0.8 (2025-01-23)

- asPipeline()          Converts a population into a list of operator pipelines.
- xegaEvalPopulation()  Evaluation of operator pipelines added.
- xegaNextPopulation()  Elitist support for operator pipelines added.

Version 1.0.0.9 (2025-07-26)

- xegaNextPopulation()  Update of current iteration function lF$cGeneration()
                        added.
