@@ -5,6 +5,7 @@ library(xegaPopulation)
 
 test_that("xegaNextPopulation P(Crossover=1.0), P(Mutation)=0.0 OK",
           {
+          lFxegaGaGene$cGeneration<-parm(1)
           lFxegaGaGene$BitMutationRate1<-parm(0.001)
           lFxegaGaGene$MutationRate1<-parm(0.000)
 	  lFxegaGaGene$MutationRate<-MutationRateFactory(method="Const")
@@ -21,6 +22,7 @@ test_that("xegaNextPopulation P(Crossover=1.0), P(Mutation)=0.0 OK",
 
 test_that("xegaNextPopulation P(Crossover=0.0) P(Mutation=1.0)  OK",
           {
+          lFxegaGaGene$cGeneration<-parm(1)
           lFxegaGaGene$BitMutationRate1<-parm(0.001)
           lFxegaGaGene$MutationRate1<-parm(1.0)
 	  lFxegaGaGene$MutationRate<-MutationRateFactory(method="Const")
@@ -38,6 +40,7 @@ test_that("xegaNextPopulation P(Crossover=0.0) P(Mutation=1.0)  OK",
 
 test_that("xegaNextPopulation P(Crossover=0.0), P(Mutation)=0.0 OK",
           {
+          lFxegaGaGene$cGeneration<-parm(1)
           lFxegaGaGene$BitMutationRate1<-parm(0.001)
           lFxegaGaGene$MutationRate1<-parm(0.0)
 	  lFxegaGaGene$MutationRate<-MutationRateFactory(method="Const")
@@ -54,6 +57,7 @@ test_that("xegaNextPopulation P(Crossover=0.0), P(Mutation)=0.0 OK",
 
 test_that("xegaNextPopulation P(Crossover=1.0), P(Mutation)=1.0 OK",
           {
+          lFxegaGaGene$cGeneration<-parm(1)
           lFxegaGaGene$BitMutationRate1<-parm(0.001)
           lFxegaGaGene$MutationRate1<-parm(1.0)
 	  lFxegaGaGene$MutationRate<-MutationRateFactory(method="Const")
